# aoc-2024

./: Cargo.toml  README.md  new_day.sh
