[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
nalgebra = "0.33.2"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tailcall = "1.0.1"
